--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -16,6 +16,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Featured Image", name: "heroImage", widget: "image"}
       - {label: "Body", name: "body", widget: "markdown"}
       - {label: "Description", name: "description", widget: "string"}
+      - {label: "Layout", name: "layout", widget: "string", default: "../../layouts/BlogPost.astro"}
